fix(input temperamentp): apagando itens e overflow hidden no wrapper

--- a/frontend/src/templates/ContentNewAnnouncement/styles.css
+++ b/frontend/src/templates/ContentNewAnnouncement/styles.css
@@ -293,7 +293,7 @@
 
 .list-temperament{
     width: 100%;
-    height: 100px;
+    overflow: hidden;
 }
 
 .list-temperament .list-item-temperament{
@@ -305,12 +305,12 @@
     height: 40px;
     line-height: 20px;
     background-color: #8200be17;
-    float: left;
     font-size: 12px;
     color: #8100BE;
     font-family: 'Quicksand', sans-serif;
     font-weight: bolder;
     text-transform: uppercase;
+    float: left;
 }
 
 .list-temperament .list-item-temperament svg{
